samples/_failures_safe/1761435791_13464b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2008b68.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_e2008b68.c:153:5: error: expected declaration or statement at end of input
  153 |     }
      |     ^
